# Prophetic-ParcelPulse

./: .env.example  .gitignore  README.md
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_spatial_and_perf_indexes.py
api/scripts/: bootstrap_prod.py  load_parcels.py  seed_fixture_alerts.py  seed_watchlist.py
api/src/parcelpulse/: circuit_breaker.py  db.py  health.py  ingest.py  main.py  models.py  observability.py  rate_limit.py  registry.py  replay.py  settings.py
api/src/parcelpulse/adapters/: _fixture.py  base.py  fema_nfhl.py  fixture_listings.py  fixture_ownership.py  fixture_zoning.py  multco_permits.py
api/src/parcelpulse/fixtures/: listings_events.json  ownership_events.json  zoning_events.json
api/src/parcelpulse/materiality/: classify.py  tier0.py  tier1.py  tier2.py
api/src/parcelpulse/routes/: alerts.py  feed_geojson.py  ops.py  parcels.py  replay.py  watchlists.py
api/tests/: conftest.py  test_alert_detail.py  test_canonical_event.py  test_circuit_breaker.py  test_classify.py  test_feed_geojson.py  test_fema_nfhl_adapter.py  test_fixture_ownership_listings.py  test_fixture_zoning_adapter.py  test_health.py  test_ingest.py  test_multco_permits_adapter.py  test_ops_metrics.py  test_parcels_search.py  test_rate_limit.py  test_replay.py  test_replay_provenance.py  test_smoke_end_to_end.py  test_tier0.py  test_tier1.py  test_tier2.py  test_watchlist_create.py  test_watchlist_feed.py
api/tests/fixtures/: fema_nfhl_sample.json  multco_permits_sample.json
web/lib/: ui.ts  (+3 more)
(+20 files in other folders)
